language condition and various improves were done.

--- a/app/src/main/res/layout/fragment_genre_list.xml
+++ b/app/src/main/res/layout/fragment_genre_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.common.GenreListFragment">
+    tools:context=".view.fragment.common.GenreListFragment"
+    android:background="#fff">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_genres"
