--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_margin="4dp">
 
-    <ImageView
-        android:id="@+id/image_view_cast_image"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/image_holder_cast"/>
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
+        <ImageView
+            android:id="@+id/image_view_cast_image"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/image_holder_cast"/>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/text_view_cast_real_name"
