--- a/app/src/main/res/menu/movie_fragment_action_bar.xml
+++ b/app/src/main/res/menu/movie_fragment_action_bar.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        app:showAsAction="ifRoom|collapseActionView"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="Search Movie" />
     <item
         android:id="@+id/action_genres"
