--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -17,7 +17,7 @@
         android:orderInCategory="2"/>
     <item
         android:id="@+id/nav_favorites"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_favorite_empty"
         android:title="@string/favorite"
         android:orderInCategory="2"/>
     <item
