--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,7 +48,7 @@
 
         <argument
             android:name="movie_arg"
-            app:argType="com.pandorina.cinemobile.data.model.Movie"
+            app:argType="com.pandorina.cinemobile.data.remote.model.Movie"
             app:nullable="true" />
     </fragment>
     <fragment
@@ -160,7 +160,7 @@
 
         <argument
             android:name="genre_arg"
-            app:argType="com.pandorina.cinemobile.data.model.Genre"
+            app:argType="com.pandorina.cinemobile.data.remote.model.Genre"
             app:nullable="true" />
         <action
             android:id="@+id/action_moviesByGenresFragment_to_nav_movie_detail"
