--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -8,7 +8,8 @@
 
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+       android:layout_height="wrap_content"
+       android:id="@+id/nested_scroll_view_movie_detail">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
