--- a/app/src/main/res/layout/fragment_movie_search.xml
+++ b/app/src/main/res/layout/fragment_movie_search.xml
@@ -9,7 +9,9 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/root_movie_queries">
+        android:id="@+id/root_movie_queries"
+        android:visibility="visible"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +31,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_last_searched_movies"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 tools:listitem="@layout/item_searched_query"
                 android:overScrollMode="never"/>
         </LinearLayout>
@@ -40,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_vertical_list"
+        android:visibility="gone"
         />
 
 
