--- a/app/src/main/res/layout/item_vertical_list.xml
+++ b/app/src/main/res/layout/item_vertical_list.xml
@@ -37,7 +37,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/montserrat_semibold"
             android:maxLines="2"
-            android:text="Teen Titans Go"
+            tools:text="Teen Titans Go"
             android:textColor="@color/color_1"
             android:textSize="20sp" />
 
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_semibold"
             android:maxLines="1"
-            android:text="2020" />
+            tools:text="2020" />
 
 
         <at.blogc.android.views.ExpandableTextView
@@ -58,7 +58,7 @@
             android:ellipsize="end"
             app:animation_duration="400"
             android:fontFamily="@font/montserrat_medium"
-            android:text="The Teen Titans are visited by the Nerdlucks, the Space Jam villains who tried to capture Michael Jordan and the Looney Tunes. Astonished to discover his fellow Titans have never seen Space Jam, Cyborg organizes an exclusive watch party. Of course, if the Titans are watching a movie, don't expect silence to be golden. Raven and Starfire provide the commentary, Cyborg presents the fun facts, Beast Boy points out the butt shots, and Robin, but Robin doesn't trust their new alien friends. Are the Nerdlucks here to attend an innocent watch party, or do they have more sinister motives up their sleeves?" />
+            tools:text="The Teen Titans are visited by the Nerdlucks, the Space Jam villains who tried to capture Michael Jordan and the Looney Tunes. Astonished to discover his fellow Titans have never seen Space Jam, Cyborg organizes an exclusive watch party. Of course, if the Titans are watching a movie, don't expect silence to be golden. Raven and Starfire provide the commentary, Cyborg presents the fun facts, Beast Boy points out the butt shots, and Robin, but Robin doesn't trust their new alien friends. Are the Nerdlucks here to attend an innocent watch party, or do they have more sinister motives up their sleeves?" />
 
         <ImageView
             android:id="@+id/image_button_expand"
@@ -67,8 +67,7 @@
             android:layout_gravity="right|bottom"
             android:background="@drawable/ic_expand"
             tools:ignore="RtlHardcoded" />
-
-
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
