--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,13 @@
             android:name="movie_arg"
             app:argType="com.pandorina.cinemobile.data.remote.model.Movie"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_nav_movie_detail_self"
+            app:destination="@id/nav_movie_detail"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_out"/>
     </fragment>
     <fragment
         android:id="@+id/nav_genres"
