--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".view.fragment.HomeFragment"
-    android:id="@+id/sfegf">
+    tools:context=".view.fragment.HomeFragment">
 
     <recycler.coverflow.RecyclerCoverFlow
         android:id="@+id/rv_trending"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        tools:listitem="@layout/item_trend_movie"
-        app:fastScrollVerticalThumbDrawable="@drawable/ic_youtube"
-        />
+        android:layout_height="340dp"
+        android:layout_marginTop="8dp"
+        fancy:layout_constraintEnd_toEndOf="parent"
+        fancy:layout_constraintStart_toStartOf="parent"
+        fancy:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:listitem="@layout/item_trend_movie" />
 
 
-</LinearLayout>
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/btn_random"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="8dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp"
+        fancy:fb_borderWidth="1dp"
+        android:clickable="true"
+        fancy:fb_defaultColor="@color/color_1"
+        fancy:fb_focusColor="@color/color_2"
+        fancy:fb_fontIconResource="&#xf074;"
+        fancy:fb_iconPosition="left"
+        fancy:fb_radius="30dp"
+        fancy:fb_text="GET A MOVIE RECOMMENDATION"
+        fancy:fb_textColor="#FFFFFF"
+        fancy:fb_textFontRes="@font/montserrat_semi_bold"
+        fancy:fb_textSize="14sp"
+        fancy:layout_constraintBottom_toBottomOf="parent"
+        fancy:layout_constraintEnd_toEndOf="parent"
+        fancy:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        android:focusable="true" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
