--- a/app/src/main/res/layout/item_configuration.xml
+++ b/app/src/main/res/layout/item_configuration.xml
@@ -4,7 +4,7 @@
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="450dp"
     android:orientation="vertical"
     android:paddingHorizontal="8dp">
 
