--- a/app/src/main/res/layout/fragment_genre_list.xml
+++ b/app/src/main/res/layout/fragment_genre_list.xml
@@ -2,4 +2,5 @@
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#fff"/>
