--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +20,7 @@
             android:layout_height="130dp"
             android:layout_marginTop="32dp"
             android:contentDescription="@string/app_logo_icon"
-            android:src="@drawable/icon_cinemobile_rounded" />
+            android:src="@drawable/ic_cinemobile"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,7 +29,7 @@
             android:textAlignment="center"
             android:textColor="@color/color_1"
             android:textSize="20sp"
-            tools:text="Cinemobile \n 1.0" />
+            android:text="@string/cinemobile_release_title" />
 
         <TextView
             android:id="@+id/tv_contact"
